Build targets to test locally.

--- a/docker/diagnostics/Makefile
+++ b/docker/diagnostics/Makefile
@@ -7,6 +7,12 @@ docker-test: docker-image
 test:
 	webpack-dev-server
 
+run: diagnostics
+	./diagnostics --path ~/conservify/diagnostics
+
+diagnostics: *.go
+	go build -o diagnostics $^
+
 pack:
 	webpack --mode production
 
