--- a/docker/diagnostics/package.json
+++ b/docker/diagnostics/package.json
@@ -1,36 +1,39 @@
 {
-    "name": "jlewallen-dynamic",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "name": "conservify-diagnostics",
+    "version": "0.1.0",
+    "private": true,
     "scripts": {
-        "build": "webpack"
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "author": "",
-    "license": "ISC",
     "dependencies": {
-        "lodash": "^4.17.15",
-        "moment": "^2.24.0",
+        "core-js": "^3.6.5",
+        "lodash": "^4.17.20",
+        "moment": "^2.29.1",
         "vue": "^2.6.11",
         "vue-headful": "^2.1.0",
-        "vue-json-pretty": "^1.6.3",
-        "vuejs": "^3.0.1"
+        "vue-json-pretty": "^1.7.1",
+        "vue-router": "^3.2.0",
+        "vuex": "^3.4.0"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.149",
-        "babel-core": "^6.26.3",
-        "babel-loader": "^8.0.6",
-        "babel-preset-es2015": "^6.24.1",
-        "css-loader": "^3.4.1",
-        "html-webpack-plugin": "^3.2.0",
-        "ts-loader": "^6.2.1",
-        "typescript": "^3.7.4",
-        "vue-loader": "^15.8.3",
-        "vue-style-loader": "^4.1.2",
-        "vue-template-compiler": "^2.6.11",
-        "webpack": "^4.41.5",
-        "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.1",
-        "minimist": ">=1.2.2"
+        "@types/lodash": "^4.14.165",
+        "@types/moment": "^2.13.0",
+        "@typescript-eslint/eslint-plugin": "^2.33.0",
+        "@typescript-eslint/parser": "^2.33.0",
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-plugin-router": "~4.5.0",
+        "@vue/cli-plugin-typescript": "~4.5.0",
+        "@vue/cli-plugin-vuex": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "@vue/eslint-config-typescript": "^5.0.2",
+        "eslint": "^6.7.2",
+        "eslint-plugin-vue": "^6.2.2",
+        "sass": "^1.26.5",
+        "sass-loader": "^8.0.2",
+        "typescript": "~3.9.3",
+        "vue-template-compiler": "^2.6.11"
     }
 }
