Fix copy path in Dockerfile

--- a/docker/diagnostics/Dockerfile
+++ b/docker/diagnostics/Dockerfile
@@ -3,9 +3,8 @@ FROM node:11.13.0-alpine AS js
 WORKDIR /app
 COPY . /app/
 
-RUN yarn install
-RUN node_modules/.bin/webpack
-
+RUN npm install
+RUN npm run build
 
 FROM golang:latest
 
@@ -13,7 +12,7 @@ RUN mkdir -p /data /app
 WORKDIR /app
 
 COPY . /app/
-COPY --from=js /app/public/* /app/public/
+COPY --from=js /app/dist/* /app/public/
 
 RUN go build -o diagnostics *.go
 
