Way better JSON viewer.

--- a/docker/diagnostics/Makefile
+++ b/docker/diagnostics/Makefile
@@ -5,10 +5,10 @@ docker-test: docker-image
 	docker run --rm -p 8080:8080 temp
 
 test:
-	npm run dev
+	node_modules/.bin/vue-cli-service serve
 
 pack:
-	npm run build
+	node_modules/.bin/vue-cli-service build
 
 run: diagnostics
 	./diagnostics --path ~/conservify/diagnostics
