--- a/amis/services/fk-cloud-proxy/envoy-proxy.yaml
+++ b/amis/services/fk-cloud-proxy/envoy-proxy.yaml
@@ -6,12 +6,14 @@ stats_sinks:
             socket_address:
                 address: 172.17.0.1
                 port_value: 8125
+
 static_resources:
   listeners:
   - address:
       socket_address:
         address: 0.0.0.0
         port_value: 7000
+
     filter_chains:
     - filters:
       - name: envoy.http_connection_manager
@@ -23,6 +25,15 @@ static_resources:
           route_config:
             name: local_route
             virtual_hosts:
+            - name: auth
+              domains:
+              - "auth.*"
+              routes:
+              - match:
+                  prefix: "/"
+                route:
+                  cluster: fk-auth
+                  timeout: 3000s
             - name: backend
               domains:
               - "*"
@@ -35,6 +46,7 @@ static_resources:
           http_filters:
           - name: envoy.router
             typed_config: {}
+
   - address:
       socket_address:
         address: 0.0.0.0
@@ -50,6 +62,16 @@ static_resources:
           route_config:
             name: local_route
             virtual_hosts:
+            - name: auth
+              require_tls: EXTERNAL_ONLY
+              domains:
+              - "auth.*"
+              routes:
+              - match:
+                  prefix: "/"
+                route:
+                  cluster: fk-auth
+                  timeout: 3000s
             - name: backend
               require_tls: EXTERNAL_ONLY
               domains:
@@ -63,6 +85,7 @@ static_resources:
           http_filters:
           - name: envoy.router
             typed_config: {}
+
   clusters:
   - name: fk-service
     connect_timeout: 0.25s
@@ -78,6 +101,7 @@ static_resources:
               socket_address:
                 address: fk-service
                 port_value: 8000
+
   - name: fk-ingester
     connect_timeout: 0.25s
     type: strict_dns
@@ -92,6 +116,22 @@ static_resources:
               socket_address:
                 address: fk-ingester
                 port_value: 8000
+
+  - name: fk-auth
+    connect_timeout: 0.25s
+    type: strict_dns
+    lb_policy: round_robin
+    http2_protocol_options: {}
+    load_assignment:
+      cluster_name: fk-auth
+      endpoints:
+      - lb_endpoints:
+        - endpoint:
+            address:
+              socket_address:
+                address: keycloak
+                port_value: 8080
+
 admin:
   access_log_path: "/dev/null"
   address:
