--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -73,8 +73,42 @@ services:
       - FIELDKIT_STREAMS_BUCKET_NAME=${STREAMS_BUCKET_NAME}
       - FIELDKIT_SESSION_KEY=${SESSION_KEY}
       - FIELDKIT_MAPBOX_TOKEN=${MAPBOX_TOKEN}
+      - FIELDKIT_SAML_CERT=${FIELDKIT_SAML_CERT}
+      - FIELDKIT_SAML_KEY=${FIELDKIT_SAML_KEY}
+      - FIELDKIT_SAML_SP_URL=${FIELDKIT_SAML_SP_URL}
+      - FIELDKIT_SAML_LOGIN_URL=${FIELDKIT_SAML_LOGIN_URL}
+      - FIELDKIT_SAML_IPD_META=${FIELDKIT_SAML_IPD_META}
+      - FIELDKIT_KEYCLOAK_URL=${FIELDKIT_KEYCLOAK_URL}
+      - FIELDKIT_KEYCLOAK_REALM=${FIELDKIT_KEYCLOAK_REALM}
+      - FIELDKIT_KEYCLOAK_API_USER=${FIELDKIT_KEYCLOAK_API_USER}
+      - FIELDKIT_KEYCLOAK_API_PASSWORD=${FIELDKIT_KEYCLOAK_API_PASSWORD}
+      - FIELDKIT_KEYCLOAK_API_REALM=${FIELDKIT_KEYCLOAK_API_REALM}
     expose:
       - "8000"
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${GELF_URL}"
+        tag: "${GELF_TAGS}"
+
+  keycloak:
+    image: "conservify/fk-cloud-keycloak:active"
+    networks:
+      - envoy-mesh
+    environment:
+      - TAG=${TAG}
+      - HOSTNAME=${HOSTNAME}
+      - KEYCLOAK_USER=${FIELDKIT_KEYCLOAK_ADMIN_USER}
+      - KEYCLOAK_PASSWORD=${FIELDKIT_KEYCLOAK_ADMIN_PASSWORD}
+      - DB_USER=${DATABASE_USERNAME}
+      - DB_PASSWORD=${DATABASE_PASSWORD}
+      - DB_ADDR=${DATABASE_ADDRESS}
+      - DB_VENDOR=postgres
+    volumes:
+      - /etc/fk:/etc/fk
+    expose:
+      - "8080"
+      - "9990"
     logging:
       driver: "gelf"
       options:
