--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -78,7 +78,7 @@ services:
       - FIELDKIT_SAML_SP_URL=${FIELDKIT_SAML_SP_URL}
       - FIELDKIT_SAML_LOGIN_URL=${FIELDKIT_SAML_LOGIN_URL}
       - FIELDKIT_SAML_IPD_META=${FIELDKIT_SAML_IPD_META}
-      - FIELDKIT_KEYCLOAK_URL=${FIELDKIT_KEYCLOAK_URL}
+      - FIELDKIT_KEYCLOAK_URL=${FIELDKIT_KEYCLOAK_URL_PRIVATE}
       - FIELDKIT_KEYCLOAK_REALM=${FIELDKIT_KEYCLOAK_REALM}
       - FIELDKIT_KEYCLOAK_API_USER=${FIELDKIT_KEYCLOAK_API_USER}
       - FIELDKIT_KEYCLOAK_API_PASSWORD=${FIELDKIT_KEYCLOAK_API_PASSWORD}
@@ -98,8 +98,10 @@ services:
     environment:
       - TAG=${TAG}
       - HOSTNAME=${HOSTNAME}
+      - KEYCLOAK_FRONTEND_URL=${FIELDKIT_KEYCLOAK_URL_PUBLIC}
       - KEYCLOAK_USER=${FIELDKIT_KEYCLOAK_ADMIN_USER}
       - KEYCLOAK_PASSWORD=${FIELDKIT_KEYCLOAK_ADMIN_PASSWORD}
+      - PROXY_ADDRESS_FORWARDING=true
       - DB_USER=${DATABASE_USERNAME}
       - DB_PASSWORD=${DATABASE_PASSWORD}
       - DB_ADDR=${DATABASE_ADDRESS}
