Adding oidc configuration, fixing failed startup issue.
New startup should end when either process does so Docker can restart.

--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -83,6 +83,14 @@ services:
       - FIELDKIT_KEYCLOAK_API_USER=${FIELDKIT_KEYCLOAK_API_USER}
       - FIELDKIT_KEYCLOAK_API_PASSWORD=${FIELDKIT_KEYCLOAK_API_PASSWORD}
       - FIELDKIT_KEYCLOAK_API_REALM=${FIELDKIT_KEYCLOAK_API_REALM}
+      - FIELDKIT_DISCOURSE_SECRET=${FIELDKIT_DISCOURSE_SECRET}
+      - FIELDKIT_DISCOURSE_RETURN_URL=${FIELDKIT_DISCOURSE_RETURN_URL}
+      - FIELDKIT_DISCOURSE_ADMIN_KEY=${FIELDKIT_DISCOURSE_ADMIN_KEY}
+      - FIELDKIT_OIDC_CLIENT_ID=${FIELDKIT_OIDC_CLIENT_ID}
+      - FIELDKIT_OIDC_CLIENT_SECRET=${FIELDKIT_OIDC_CLIENT_SECRET}
+      - FIELDKIT_OIDC_RETURN_URL=${FIELDKIT_OIDC_CLIENT_ID}
+      - FIELDKIT_OIDC_CONFIG_URL=${FIELDKIT_OIDC_CONFIG_URL}
+
     expose:
       - "8000"
     volumes:
