--- a/amis/stacks/auth-stack/docker-compose.yaml
+++ b/amis/stacks/auth-stack/docker-compose.yaml
@@ -1,23 +1,5 @@
 version: "3.7"
 services:
-  proxy:
-    image: "conservify/auth-proxy:active"
-    networks:
-      - envoy-mesh
-    expose:
-      - "7000"
-      - "8000"
-      - "9000"
-    ports:
-      - "7000:7000"
-      - "8000:8000"
-      - "9000:9000"
-    logging:
-      driver: "gelf"
-      options:
-        gelf-address: "${GELF_URL}"
-        tag: "${GELF_TAGS}"
-
   keycloak:
     image: "conservify/fk-cloud-keycloak:active"
     networks:
@@ -43,4 +25,5 @@ services:
         tag: "${GELF_TAGS}"
 
 networks:
-  envoy-mesh: {}
+  envoy-mesh:
+    name: envoy-mesh
