Configure JSON logging in keycloak.
I wresteled with this and eventually the only thing that worked out of
the box every time on startup was messing with standalone-ha.xml

--- a/amis/services/auth-keycloak/Dockerfile
+++ b/amis/services/auth-keycloak/Dockerfile
@@ -1,3 +1,6 @@
 FROM jboss/keycloak
 
 ADD theme /opt/jboss/keycloak/themes/fk
+RUN mkdir /opt/jboss/startup-scripts
+ADD logging.properties /opt/jboss/keycloak/domain/configuration/logging.properties
+ADD standalone-ha.xml /opt/jboss/keycloak/standalone/configuration/standalone-ha.xml
