Use JSON logging from the get go.

--- a/amis/services/auth-keycloak/logging.properties
+++ b/amis/services/auth-keycloak/logging.properties
@@ -33,7 +33,7 @@ handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
 handler.CONSOLE.properties=autoFlush,target
 handler.CONSOLE.level=${jboss.boot.server.log.console.level:INFO}
 handler.CONSOLE.autoFlush=true
-handler.CONSOLE.formatter=PATTERN
+handler.CONSOLE.formatter=JSON
 handler.CONSOLE.target=SYSTEM_OUT
 
 # File handler configuration
@@ -48,3 +48,10 @@ handler.BOOT_FILE.formatter=PATTERN
 formatter.PATTERN=org.jboss.logmanager.formatters.PatternFormatter
 formatter.PATTERN.properties=pattern
 formatter.PATTERN.pattern=%d{yyyy-MM-dd HH\:mm\:ss,SSS} %-5p [%c] (%t) %s%e%n
+
+formatter.JSON=org.jboss.logmanager.formatters.JsonFormatter
+formatter.JSON.properties=exceptionOutputType,prettyPrint,printDetails,recordDelimiter
+formatter.JSON.exceptionOutputType=DETAILED
+formatter.JSON.prettyPrint=false
+formatter.JSON.printDetails=false
+formatter.JSON.recordDelimiter=\n
