Turn logging down now that we can see everything.

--- a/amis/stacks/auth-stack/docker-compose.yaml
+++ b/amis/stacks/auth-stack/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       - TAG=${TAG}
       - HOSTNAME=${HOSTNAME}
-      - KEYCLOAK_LOGLEVEL=DEBUG
+      - KEYCLOAK_LOGLEVEL=INFO
       - KEYCLOAK_FRONTEND_URL=${FIELDKIT_KEYCLOAK_URL_PUBLIC}
       - KEYCLOAK_USER=${FIELDKIT_KEYCLOAK_ADMIN_USER}
       - KEYCLOAK_PASSWORD=${FIELDKIT_KEYCLOAK_ADMIN_PASSWORD}
