--- a/amis/services/portal-service/service-envoy.yaml
+++ b/amis/services/portal-service/service-envoy.yaml
@@ -8,8 +8,7 @@ static_resources:
     - filters:
       - name: envoy.http_connection_manager
         typed_config:
-          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
-          codec_type: auto
+          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
           stat_prefix: ingress_http
           request_timeout: 3000s
           route_config:
@@ -25,8 +24,9 @@ static_resources:
                   cluster: local_service
                   timeout: 3000s
           http_filters:
-          - name: envoy.router
+          - name: envoy.filters.http.router
             typed_config: {}
+
   clusters:
   - name: local_service
     connect_timeout: 0.25s
@@ -41,9 +41,22 @@ static_resources:
               socket_address:
                 address: 127.0.0.1
                 port_value: 8080
+
 admin:
   access_log_path: "/dev/null"
   address:
     socket_address:
       address: 0.0.0.0
       port_value: 9000
+
+layered_runtime:
+  layers:
+    - name: static_layer_0
+      static_layer:
+        envoy:
+          resource_limits:
+            listener:
+              example_listener_name:
+                connection_limit: 10000
+        overload:
+          global_downstream_max_connections: 50000
