--- a/amis/services/proxy-service/envoy-proxy.yaml
+++ b/amis/services/proxy-service/envoy-proxy.yaml
@@ -25,6 +25,7 @@ static_resources:
               "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
               path: /dev/stdout
               typed_json_format:
+                start_time: "%START_TIME%"
                 protocol: "%PROTOCOL%"
                 duration: "%DURATION%"
                 request_duration: "%REQUEST_DURATION%"
@@ -86,6 +87,7 @@ static_resources:
               "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
               path: /dev/stdout
               typed_json_format:
+                start_time: "%START_TIME%"
                 protocol: "%PROTOCOL%"
                 duration: "%DURATION%"
                 request_duration: "%REQUEST_DURATION%"
