--- a/amis/services/auth-keycloak/theme/account/theme.properties
+++ b/amis/services/auth-keycloak/theme/account/theme.properties
@@ -4,6 +4,8 @@ import=common/keycloak
 styles=css/account.css
 stylesCommon=node_modules/patternfly/dist/css/patternfly.min.css node_modules/patternfly/dist/css/patternfly-additions.min.css
 
+meta=viewport==width=device-width,initial-scale=1
+
 ##### css classes for form buttons
 # main class used for all buttons
 kcButtonClass=btn
