chore: Only build in-repository stacks.
Building portal-stack is done by the build in the cloud repository.

--- a/amis/Makefile
+++ b/amis/Makefile
@@ -6,7 +6,9 @@ IMAGES ?= dummy-proxy dummy-service proxy-service auth-keycloak portal-service
 BUILD := $(abspath build)
 DEPDIR := $(abspath .deps)
 
-default: stacks
+default: repository-stacks
+
+repository-stacfks: dummy-stack proxy-stack auth-stack
 
 $(DEPDIR)/rules.mk: Makefile
 	@rm -rf $(DEPDIR)
