fix: Trailing slash in Docker copy.

--- a/amis/Dockerfile
+++ b/amis/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /work
 
 COPY bare.json /work/bare.json
 COPY stacked.json /work/stacked.json
-COPY files build/*.tar* /work/files
+COPY files build/*.tar* /work/files/
