fix: Pass new bucket variables to container.

--- a/amis/stacks/portal-stack/docker-compose.yaml
+++ b/amis/stacks/portal-stack/docker-compose.yaml
@@ -20,8 +20,8 @@ services:
       - FIELDKIT_PRODUCTION=${PRODUCTION}
       - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
-      - FIELDKIT_MEDIA_BUCKET_NAME=${MEDIA_BUCKET_NAME}
       - FIELDKIT_STREAMS_BUCKET_NAME=${STREAMS_BUCKET_NAME}
+      - FIELDKIT_STREAMS_BUCKETS=${STREAMS_BUCKETS}
       - FIELDKIT_SESSION_KEY=${SESSION_KEY}
     expose:
       - "8000"
@@ -48,6 +48,8 @@ services:
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
       - FIELDKIT_MEDIA_BUCKET_NAME=${MEDIA_BUCKET_NAME}
       - FIELDKIT_STREAMS_BUCKET_NAME=${STREAMS_BUCKET_NAME}
+      - FIELDKIT_MEDIA_BUCKETS=${MEDIA_BUCKETS}
+      - FIELDKIT_STREAMS_BUCKETS=${STREAMS_BUCKETS}
       - FIELDKIT_SESSION_KEY=${SESSION_KEY}
       - FIELDKIT_MAPBOX_TOKEN=${MAPBOX_TOKEN}
       - FIELDKIT_SAML_CERT=${FIELDKIT_SAML_CERT}
