feat: Pin strapi and influxdb versions.
Influxdb > 2 will require authentication, so make that change client-wise
before upgrading. Strapi just refused to start when using the latest one,
probably need to upgrade.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -127,7 +127,7 @@ services:
       - /svr0/grafana:/var/lib/grafana
 
   influxdb:
-    image: influxdb
+    image: influxdb:1.8
     restart: always
     ports:
       - 8086:8086
