fix: Jenkins user permission issue on newer image.

--- a/docker/jenkins/server/Dockerfile
+++ b/docker/jenkins/server/Dockerfile
@@ -8,4 +8,4 @@ RUN wget https://nodejs.org/dist/v12.18.1/node-v12.18.1-linux-x64.tar.xz && tar 
 RUN PATH=$PATH:/usr/local/node/bin npm install -g yarn
 RUN wget https://download.docker.com/linux/static/stable/x86_64/docker-17.09.0-ce.tgz && tar -C /usr/local -xf docker-17.09.0-ce.tgz
 ENV log4j2.formatMsgNoLookups=True
-USER jenkins
+# USER jenkins
