--- a/amis/services/portal-service/service-envoy.yaml
+++ b/amis/services/portal-service/service-envoy.yaml
@@ -11,6 +11,8 @@ static_resources:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
           stat_prefix: ingress_http
           request_timeout: 3000s
+          upgrade_configs:
+          - upgrade_type: websocket
           route_config:
             name: local_route
             virtual_hosts:
