--- a/amis/stacks/portal-stack/docker-compose.yaml
+++ b/amis/stacks/portal-stack/docker-compose.yaml
@@ -12,8 +12,6 @@ services:
       - FIELDKIT_SERVER_NAME=${HOSTNAME}
       - FIELDKIT_POSTGRES_URL=${DATABASE_URL}
       - FIELDKIT_DOMAIN=${ZONE_NAME}
-      - FIELDKIT_PORTAL_ROOT=/app/portal
-      - FIELDKIT_LEGACY_ROOT=/app/legacy
       - FIELDKIT_EMAILER=aws
       - FIELDKIT_ARCHIVER=aws
       - FIELDKIT_EMAIL_OVERRIDE=${EMAIL_OVERRIDE}
@@ -39,7 +37,7 @@ services:
       - FIELDKIT_POSTGRES_URL=${DATABASE_URL}
       - FIELDKIT_DOMAIN=${ZONE_NAME}
       - FIELDKIT_PORTAL_ROOT=/app/portal
-      - FIELDKIT_LEGACY_ROOT=/app/legacy
+      - FIELDKIT_WELL_KNOWN_ROOT=/app/.well-known
       - FIELDKIT_EMAILER=aws
       - FIELDKIT_ARCHIVER=aws
       - FIELDKIT_EMAIL_OVERRIDE=${EMAIL_OVERRIDE}
@@ -73,6 +71,7 @@ services:
       - "8000"
     volumes:
       - /etc/fk:/etc/fk
+      - /app/.well-known:/app/.well-known
 
 networks:
   envoy-mesh:
