--- a/amis/services/proxy-service/envoy-proxy.yaml
+++ b/amis/services/proxy-service/envoy-proxy.yaml
@@ -61,6 +61,15 @@ static_resources:
                           route:
                             cluster: fk-auth
                             timeout: 3000s
+                    - name: well-known-passthru-vh
+                      domains:
+                        - "*"
+                      routes:
+                        - match:
+                            prefix: "/.well-known"
+                          route:
+                            cluster: fk-service
+                            timeout: 3000s
                     - name: fk-service-vh
                       domains:
                         - "*"
@@ -130,6 +139,15 @@ static_resources:
                             prefix: "/"
                           route:
                             cluster: fk-auth
+                            timeout: 3000s
+                    - name: well-known-passthru-vh
+                      domains:
+                        - "*"
+                      routes:
+                        - match:
+                            prefix: "/.well-known"
+                          route:
+                            cluster: fk-service
                             timeout: 3000s
                     - name: fk-service-vh
                       require_tls: EXTERNAL_ONLY
