--- a/amis/services/proxy-service/Dockerfile
+++ b/amis/services/proxy-service/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get update && apt-get -q install -y curl && rm -rf /var/lib/{apt,dpkg,ca
 
 COPY envoy-proxy.yaml /etc
 
-CMD /usr/local/bin/envoy -c /etc/envoy-proxy.yaml --service-cluster proxy
+CMD [ "/usr/local/bin/envoy", "-c", "/etc/envoy-proxy.yaml", "--service-cluster proxy" ]
