--- a/amis/services/proxy-service/envoy-proxy.yaml
+++ b/amis/services/proxy-service/envoy-proxy.yaml
@@ -82,7 +82,8 @@ static_resources:
     - address:
         socket_address:
           address: 0.0.0.0
-          port_value: 8000
+          port_value: 8001
+
       filter_chains:
         - filters:
             - name: envoy.http_connection_manager
@@ -150,7 +151,81 @@ static_resources:
                   - name: envoy.filters.http.router
                     typed_config: {}
 
+    - address:
+        socket_address:
+          address: 0.0.0.0
+          port_value: 8000
+      filter_chains:
+        - filters:
+            - name: envoy.http_connection_manager
+              typed_config:
+                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+                access_log:
+                  - name: envoy.access_loggers.file
+                    typed_config:
+                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+                      path: /dev/stdout
+                      typed_json_format:
+                        start_time: "%START_TIME%"
+                        protocol: "%PROTOCOL%"
+                        duration: "%DURATION%"
+                        request_duration: "%REQUEST_DURATION%"
+                        response_duration: "%RESPONSE_DURATION%"
+                        bytes_tx: "%BYTES_SENT%"
+                        bytes_rx: "%BYTES_RECEIVED%"
+                        http_status: "%RESPONSE_CODE%"
+                        flags: "%RESPONSE_FLAGS%"
+                        upstream_host: "%UPSTREAM_HOST%"
+                        upstream_cluster: "%UPSTREAM_CLUSTER%"
+                        method: "%REQ(:METHOD)%"
+                        route_name: "%ROUTE_NAME%"
+                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
+                        upstream_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
+                        forwarded_for: "%REQ(X-FORWARDED-FOR)%"
+                        user_agent: "%REQ(USER-AGENT)%"
+                        req_id: "%REQ(X-REQUEST-ID)%"
+                        authority: "%REQ(:AUTHORITY)%"
+                        response_content_type: "%REQ(CONTENT-TYPE)%"
+                stat_prefix: ingress_http
+                request_timeout: 3000s
+                upgrade_configs:
+                  - upgrade_type: websocket
+                route_config:
+                  name: local_route
+                  virtual_hosts:
+                    - name: fe-vh
+                      domains:
+                        - "*"
+                      routes:
+                        - match:
+                            prefix: "/.well-known"
+                          route:
+                            cluster: fk-service
+                            timeout: 3000s
+                        - match:
+                            prefix: "/"
+                          route:
+                            cluster: self-8001
+                            timeout: 3000s
+                http_filters:
+                  - name: envoy.filters.http.router
+                    typed_config: {}
+
   clusters:
+    - name: self-8001
+      connect_timeout: 0.25s
+      type: strict_dns
+      lb_policy: round_robin
+      load_assignment:
+        cluster_name: self-8001
+        endpoints:
+          - lb_endpoints:
+              - endpoint:
+                  address:
+                    socket_address:
+                      address: 127.0.0.1
+                      port_value: 8001
+
     - name: fk-service
       connect_timeout: 0.25s
       type: strict_dns
