--- a/amis/services/proxy-service/envoy-proxy.yaml
+++ b/amis/services/proxy-service/envoy-proxy.yaml
@@ -61,6 +61,8 @@ static_resources:
                           route:
                             cluster: fk-auth
                             timeout: 3000s
+                            auto_host_rewrite: true
+                            append_x_forwarded_host: true
                     - name: fk-service-vh
                       domains:
                         - "*"
@@ -70,11 +72,15 @@ static_resources:
                           route:
                             cluster: fk-charting
                             timeout: 3000s
+                            auto_host_rewrite: true
+                            append_x_forwarded_host: true
                         - match:
                             prefix: "/"
                           route:
                             cluster: fk-service
                             timeout: 3000s
+                            auto_host_rewrite: true
+                            append_x_forwarded_host: true
                 http_filters:
                   - name: envoy.filters.http.router
                     typed_config: {}
@@ -132,6 +138,8 @@ static_resources:
                           route:
                             cluster: fk-auth
                             timeout: 3000s
+                            auto_host_rewrite: true
+                            append_x_forwarded_host: true
                     - name: fk-service-vh
                       require_tls: EXTERNAL_ONLY
                       domains:
@@ -142,11 +150,15 @@ static_resources:
                           route:
                             cluster: fk-charting
                             timeout: 3000s
+                            auto_host_rewrite: true
+                            append_x_forwarded_host: true
                         - match:
                             prefix: "/"
                           route:
                             cluster: fk-service
                             timeout: 3000s
+                            auto_host_rewrite: true
+                            append_x_forwarded_host: true
                 http_filters:
                   - name: envoy.filters.http.router
                     typed_config: {}
@@ -202,11 +214,15 @@ static_resources:
                           route:
                             cluster: fk-service
                             timeout: 3000s
+                            auto_host_rewrite: true
+                            append_x_forwarded_host: true
                         - match:
                             prefix: "/"
                           route:
                             cluster: self-8001
                             timeout: 3000s
+                            auto_host_rewrite: true
+                            append_x_forwarded_host: true
                 http_filters:
                   - name: envoy.filters.http.router
                     typed_config: {}
@@ -238,7 +254,7 @@ static_resources:
                   address:
                     socket_address:
                       address: fk-service
-                      port_value: 8000
+                      port_value: 8080
 
     - name: fk-ingester
       connect_timeout: 0.25s
