--- a/amis/files/telegraf.conf
+++ b/amis/files/telegraf.conf
@@ -106,11 +106,11 @@
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
   # urls = ["udp://127.0.0.1:8089"]
-  urls = ["${INFLUX_URL}"]
+  urls = ["${METRICS_INFLUXDB_URL}"]
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
-  database = "${INFLUX_DATABASE}"
+  database = "${METRICS_INFLUXDB_DATABASE}"
 
   ## The value of this tag will be used to determine the database.  If this
   ## tag is not set the 'database' option is used as the default.
@@ -136,8 +136,8 @@
   # timeout = "5s"
 
   ## HTTP Basic Auth
-  username = "${INFLUX_USER}"
-  password = "${INFLUX_PASSWORD}"
+  username = "${METRICS_INFLUXDB_USER}"
+  password = "${METRICS_INFLUXDB_PASSWORD}"
 
   ## HTTP User-Agent
   # user_agent = "telegraf"
