--- a/terraform/fk/user_data_influxdb.yaml
+++ b/terraform/fk/user_data_influxdb.yaml
@@ -30,10 +30,10 @@ write_files:
       SERVER_NAME=${hostname}
       ENV_TAG=${env_tag}
 
-      INFLUX_URL=${influx_url}
-      INFLUX_DATABASE=${influx_database}
-      INFLUX_USER=${influx_user}
-      INFLUX_PASSWORD=${influx_password}
+      METRICS_INFLUXDB_URL=${metrics_influxdb_url}
+      METRICS_INFLUXDB_DATABASE=${metrics_influxdb_database}
+      METRICS_INFLUXDB_USER=${metrics_influxdb_user}
+      METRICS_INFLUXDB_PASSWORD=${metrics_influxdb_password}
 
       AWS_ACCESS_KEY=${aws_access_key}
       AWS_SECRET_KEY=${aws_secret_key}
