feat: Pass influxdb configuration to container.

--- a/amis/stacks/influxdb-stack/docker-compose.yaml
+++ b/amis/stacks/influxdb-stack/docker-compose.yaml
@@ -16,6 +16,12 @@ services:
       - FIELDKIT_PRODUCTION=${PRODUCTION}
       - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=${FIELDKT_INFLUXDB_USERNAME}
+      - DOCKER_INFLUXDB_INIT_PASSWORD=${FIELDKT_INFLUXDB_PASSWORD}
+      - DOCKER_INFLUXDB_INIT_ORG=${FIELDKT_INFLUXDB_ORG}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${FIELDKT_INFLUXDB_BUCKET}
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${FIELDKT_INFLUXDB_TOKEN}
     expose:
       - "8086"
     ports:
